--- a/.github/workflows/deploy-infrastructure.yml
+++ b/.github/workflows/deploy-infrastructure.yml
@@ -21,7 +21,7 @@ env:
   TF_VERSION: '1.6.0'
   TERRAFORM_DIR: './terraform'
   STATE_BUCKET: 'bedrock-tfstate-alt-soe-025-0223'
-  LOCK_TABLE: 'bedrock-terraform-lock'
+  LOCK_TABLE: 'bedrock-terraform-state-lock'
   CLUSTER_NAME: 'project-bedrock-cluster'
 
 permissions:
@@ -230,6 +230,10 @@ jobs:
             --billing-mode PAY_PER_REQUEST \
             --region ${{ secrets.AWS_REGION }} \
             --tags Key=Project,Value=Bedrock Key=ManagedBy,Value=Terraform
+          
+          echo "Waiting for DynamoDB table to be active..."
+          aws dynamodb wait table-exists --table-name "${{ env.LOCK_TABLE }}" --region ${{ secrets.AWS_REGION }}
+          echo "DynamoDB table is ready"
         fi
         
         echo "Backend setup complete!"
