--- a/.github/workflows/deploy-infrastructure.yml
+++ b/.github/workflows/deploy-infrastructure.yml
@@ -243,6 +243,65 @@ jobs:
         echo "Initializing Terraform..."
         terraform init
     
+    - name: Clean State (Remove Problematic Resources)
+      run: |
+        echo "=== Cleaning Terraform State ==="
+        echo "Checking for resources that could cause provider conflicts..."
+        
+        # Download current state from S3
+        aws s3 cp s3://${{ env.STATE_BUCKET }}/bedrock/terraform.tfstate ./state-backup.json 2>/dev/null || {
+          echo "✓ No existing state file - this is a fresh deployment"
+          exit 0
+        }
+        
+        # Count problematic resources
+        PROBLEM_COUNT=$(cat ./state-backup.json | jq '[.resources[] | select(
+          .type == "kubernetes_cluster_role" or 
+          .type == "kubernetes_cluster_role_binding" or 
+          .type == "aws_eks_pod_identity_association"
+        )] | length' 2>/dev/null || echo "0")
+        
+        if [ "$PROBLEM_COUNT" -gt "0" ]; then
+          echo "⚠️  Found $PROBLEM_COUNT problematic resources in state:"
+          cat ./state-backup.json | jq -r '.resources[] | select(
+            .type == "kubernetes_cluster_role" or 
+            .type == "kubernetes_cluster_role_binding" or 
+            .type == "aws_eks_pod_identity_association"
+          ) | "  - \(.type).\(.name)"' || true
+          
+          echo ""
+          echo "Creating backup and cleaning state..."
+          
+          # Create timestamped backup
+          cp ./state-backup.json ./state-backup-$(date +%Y%m%d-%H%M%S).json
+          
+          # Remove problematic resources
+          cat ./state-backup.json | jq 'del(.resources[] | select(
+            .type == "kubernetes_cluster_role" or 
+            .type == "kubernetes_cluster_role_binding" or 
+            .type == "aws_eks_pod_identity_association"
+          ))' > ./state-cleaned.json
+          
+          # Verify cleaning worked
+          REMAINING=$(cat ./state-cleaned.json | jq '[.resources[] | select(
+            .type == "kubernetes_cluster_role" or 
+            .type == "kubernetes_cluster_role_binding" or 
+            .type == "aws_eks_pod_identity_association"
+          )] | length' 2>/dev/null || echo "999")
+          
+          if [ "$REMAINING" -eq "0" ]; then
+            # Upload cleaned state back to S3
+            aws s3 cp ./state-cleaned.json s3://${{ env.STATE_BUCKET }}/bedrock/terraform.tfstate
+            echo "✓ Successfully removed $PROBLEM_COUNT resources from state"
+          else
+            echo "❌ ERROR: Failed to clean state properly"
+            exit 1
+          fi
+        else
+          echo "✓ No problematic resources found - state is clean"
+        fi
+      continue-on-error: false
+    
     - name: Terraform Apply
       run: |
         echo "Deploying infrastructure..."
